httpserver/httpserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - name: http-server
        image: xingyunyang/httpserver:v1.1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: httpserver-config
          mountPath: /opt/httpserver/conf
      volumes:
      - name: httpserver-config
        configMap:
          name: httpserver-config
          items:
            - key: default
              path: httpserver-defaults.conf 
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        readinessProbe:           # readinessProbe
          httpGet:                # HTTP GET定义
            path: /healthz
            port: 80
        lifecycle:
        preStop:
          exec:
            command: [ "/bin/sh","-c","killall httpserver" ]
            
---
apiVersion: v1
kind: Service
metadata:
  name: http-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30003
    protocol: TCP
  type: NodePort
  selector:
    app: http-server
