httpserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - spark.com
      secretName: spark-tls
  rules:
    - host: spark.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: http-server
                port:
                  number: 80
